--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "fullstack",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "8.1.1",
-    "npm": "5.0.3"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-session": "^2.0.0-beta.3",
-    "express": "^4.16.2",
-    "mongoose": "^4.13.9",
-    "nodemon": "^1.14.9",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
-  }
+    "name": "fullstack",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "engines": {
+        "node": "8.1.1",
+        "npm": "5.0.3"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "server": "nodemon index.js",
+        "client": "npm run start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "concurrently": "^3.5.1",
+        "cookie-session": "^2.0.0-beta.3",
+        "express": "^4.16.2",
+        "mongoose": "^4.13.9",
+        "nodemon": "^1.14.9",
+        "passport": "^0.4.0",
+        "passport-google-oauth20": "^1.0.0"
+    }
 }
