--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "mongoose": "^4.13.9",
         "nodemon": "^1.14.9",
         "passport": "^0.4.0",
-        "passport-google-oauth20": "^1.0.0"
+        "passport-google-oauth20": "^1.0.0",
+        "react-stripe-checkout": "^2.6.3"
     }
 }
