--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "nodemon": "^1.14.9",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
-        "react-stripe-checkout": "^2.6.3"
+        "react-stripe-checkout": "^2.6.3",
+        "stripe": "^5.4.0"
     }
 }
