--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "server": "nodemon index.js",
         "client": "npm run start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
-
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
@@ -28,6 +27,7 @@
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
         "react-stripe-checkout": "^2.6.3",
+        "sendgrid": "^5.2.3",
         "stripe": "^5.4.0"
     }
 }
