--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
         "/auth/google": {
             "target": "http://localhost:5000"
         },
-        "/api/*":{
+        "/api/*": {
             "target": "http://localhost:5000"
         }
     },
@@ -19,6 +19,7 @@
         "react-router-dom": "^4.2.2",
         "react-scripts": "1.1.0",
         "redux": "^3.7.2",
+        "redux-form": "^7.2.3",
         "redux-thunk": "^2.2.0"
     },
     "scripts": {
