--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "client": "npm run start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-        "webhook": "forever sendgrid_webhooks.js" 
+        "webhook": "forever sendgrid_webhooks.js"
     },
     "author": "",
     "license": "ISC",
@@ -24,10 +24,12 @@
         "cookie-session": "^2.0.0-beta.3",
         "express": "^4.16.2",
         "localtunnel": "^1.8.3",
+        "lodash": "^4.17.5",
         "mongoose": "^4.13.9",
         "nodemon": "^1.14.9",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
+        "path-parser": "^3.0.1",
         "react-stripe-checkout": "^2.6.3",
         "sendgrid": "^5.2.3",
         "stripe": "^5.4.0"
